--- a/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-gke/cnx-mgr-kdd-gke.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-gke/cnx-mgr-kdd-gke.yaml
@@ -1,7 +1,7 @@
 ---
 layout: null
 ---
-{% helm --execute templates/cnx.yaml %}
+{% helm tigera-secure-lma --execute templates/manager.yaml %}
 datastore: kdd
 platform: gke
 {% endhelm %}
