--- a/_includes/master/manifests/cnx-api.yaml
+++ b/_includes/master/manifests/cnx-api.yaml
@@ -1,96 +1,24 @@
 {{- if eq .Values.datastore "kdd" }}
-# This manifest adds the additional Tigera Secure EE Manager components to a cluster
+# This manifest adds the additional Tigera Secure EE components to a cluster
 # that has already had the Calico part of Tigera Secure EE deployed.
 # - It refers to the calico-config ConfigMap from that file, so if you are
 #   not using the provided hosted Calico manifest you must update
 #   references to that resource in this file.
-# - Update the tigera-cnx-manager-config ConfigMap below before use.
 # - Optionally update the cnx-apiserver-certs ConfigMap and caBundle in the
 #   apiregistration section below to use your TLS certs for secure communication
 #   between the Tigera Secure EE API server and Kubernetes API server.
-# - This manifest makes the Tigera Secure EE Manager web server available via a NodePort
-#   serving on port 30003.  You may wish to update how this is exposed; do
-#   so by editing the tigera-cnx-manager-access Service below.
 {{- else if eq .Values.datastore "etcd" }}
-# This manifest adds the additional Tigera Secure EE Manager components to a cluster
+# This manifest adds the additional Tigera Secure EE components to a cluster
 # that has already had the Calico part of Tigera Secure EE deployed.
 # - It refers to the calico-config ConfigMap and calico-etcd-secrets Secret
 #   from that file, so if you are not using the provided hosted Calico
 #   manifest you must update references to those resources in this file.
-# - Update the tigera-cnx-manager-config ConfigMap below before use.
 # - Optionally update the cnx-apiserver-certs ConfigMap and caBundle in the
 #   apiregistration section below to use your TLS certs for secure communication
 #   between the Tigera Secure EE API server and Kubernetes API server.
-# - This manifest makes the Tigera Secure EE Manager web server available via a NodePort
-#   serving on port 30003.  You may wish to update how this is exposed; do
-#   so by editing the cnx-manager Service below.
 {{- end }}
-
-# Update this ConfigMap with the Google login client id.
-kind: ConfigMap
-apiVersion: v1
-metadata:
-  name: tigera-cnx-manager-config
-  namespace: kube-system
-data:
-  # Authentication type.  Must be set to "OIDC", "Basic", "Token", or "OAuth".
-{{- if eq .Values.orch "openshift" }}
-  tigera.cnx-manager.authentication-type: "OAuth"
-{{- else if eq .Values.platform "eks" }}
-  tigera.cnx-manager.authentication-type: "Token"
-{{- else if .Values.manager.auth }}
-  tigera.cnx-manager.authentication-type: {{ .Values.manager.auth.type | default "Basic" | quote }}
-{{- else }}
-  tigera.cnx-manager.authentication-type: "Basic"
-{{- end }}
-  # The OIDC authority.  Required if authentication-type is OIDC, ignored otherwise.
-{{- if .Values.manager.auth }}
-  tigera.cnx-manager.oidc-authority: {{ .Values.manager.auth.authority | default "https://accounts.google.com" | quote }}
-{{- else }}
-  tigera.cnx-manager.oidc-authority: "https://accounts.google.com"
-{{- end }}
-  # The OIDC client id to use for OIDC login.  Kubelet must be configured accordingly.
-  # Value is ignored if not using OIDC login.
-{{- if .Values.manager.auth }}
-  tigera.cnx-manager.oidc-client-id: {{ .Values.manager.auth.clientID | default "<oidc-client-id>" | quote }}
-{{- else }}
-  tigera.cnx-manager.oidc-client-id: "<oidc-client-id>"
-{{- end }}
-  # The OAuth endpoint. Required if authentication-type is OAuth, ignored otherwise.
-{{- if .Values.manager.auth }}
-  tigera.cnx-manager.oauth-authority: {{ .Values.manager.auth.authority | default "https://<oauth-authority>/oauth/authorize" | quote }}
-{{- else }}
-  tigera.cnx-manager.oauth-authority: "https://<oauth-authority>/oauth/authorize"
-{{- end }}
-  # The OAuth client id to use for OAuth login. Value is ignored if not using OAuth login.
-{{- if .Values.manager.auth }}
-  tigera.cnx-manager.oauth-client-id: {{ .Values.manager.auth.clientID | default "cnx-manager" | quote }}
-{{- else }}
-  tigera.cnx-manager.oauth-client-id: "cnx-manager"
-{{- end }}
-  # Prometheus server resource path
-  tigera.cnx-manager.prometheus-api-url: "/api/v1/namespaces/calico-monitoring/services/calico-node-prometheus:9090/proxy/api/v1"
-  # Compliance resource path
-  tigera.cnx-manager.compliance-api-url: "/compliance"
-  # Query api url
-  tigera.cnx-manager.query-api-url: "/api/v1/namespaces/kube-system/services/https:cnx-api:8080/proxy"
-  # Elasticsearch service resource path
-  tigera.cnx-manager.elasticsearch-api-url: "/api/v1/namespaces/calico-monitoring/services/elasticsearch-tigera-elasticsearch:9200/proxy"
-  # Path to Kibana.  The default is for a port forwarded to the NodePort included with the operator based install.
-  # Replace this with the URL of your Kibana if you installed it yourself or are accessing it differently.
-  tigera.cnx-manager.kibana-url: "http://127.0.0.1:30601"
-  # Whether sentry.io automatic error reporting of client side UI bugs is enabled.
-  tigera.cnx-manager.error-tracking: "false"
-  # Enable ALP support in the UI
-  tigera.cnx-manager.alp-support: "false"
-  # The name of the cluster.  This field is used as part of the index name of Elasticsearch logs, and is intended
-  # to allow multiple clusters to share one Elasticsearch cluster.  The value of this field must match that of 
-  # ELASTIC_INDEX_SUFFIX in tigera-fluentd-node.
-  tigera.cnx-manager.cluster-name: "cluster"
 
 {{- if ne .Values.platform "eks" }}
----
-
 # Optionally update this ConfigMap to enable TLS with certificate verification when Tigera Secure EE API
 # server communicates with the Kubernetes API server.
 apiVersion: v1
@@ -111,41 +39,8 @@ data:
   #apiserver.key:
   #apiserver.crt:
 {{- end }}
-{{- end }}
 ---
-
-{{- if eq .Values.manager.service.type "NodePort" }}
-# Optionally update this Service to change how Tigera Secure EE Manager is accessed.
-# If using Google login, the URL for the web server must be configured
-# as a redirect URI in the Google project.  If the web server will be
-# accessed at https://<host>:<port>, add https://<host>:<port>/login/oidc/callback
-# to the redirect URI list for the project.
 {{- end }}
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    k8s-app: cnx-manager
-  name: cnx-manager
-  namespace: kube-system
-spec:
-  selector:
-    k8s-app: cnx-manager
-  ports:
-    - port: 9443
-      targetPort: 9443
-{{- if .Values.manager.service.nodePort }}
-      nodePort: {{ .Values.manager.service.nodePort }}
-{{- end }}
-  type: {{ .Values.manager.service.type }}
-{{- if .Values.manager.service.clusterIP }}
-  clusterIP: {{ .Values.manager.service.clusterIP }}
-{{- end }}
-{{- if .Values.manager.service.loadBalancerIP }}
-  loadBalancerIP: {{ .Values.manager.service.loadBalancerIP }}
-{{- end }}
-
----
 
 # Optionally update this ConfigMap to use your own caBundle.
 apiVersion: apiregistration.k8s.io/v1beta1
@@ -256,14 +151,6 @@ kind: ServiceAccount
 apiVersion: v1
 metadata:
   name: cnx-apiserver
-  namespace: kube-system
-
----
-
-kind: ServiceAccount
-apiVersion: v1
-metadata:
-  name: cnx-manager
   namespace: kube-system
 
 ---
@@ -590,239 +477,3 @@ spec:
         #   secret:
         #     secretName: cnx-apiserver-certs
 {{- end }}
-
----
-
-apiVersion: extensions/v1beta1
-kind: Deployment
-metadata:
-  name: cnx-manager
-  namespace: kube-system
-  labels:
-    k8s-app: cnx-manager
-spec:
-  replicas: 1
-  strategy:
-    type: Recreate
-  template:
-    metadata:
-      name: cnx-manager
-      namespace: kube-system
-      labels:
-        k8s-app: cnx-manager
-      annotations:
-        # Mark this pod as a critical add-on; when enabled, the critical add-on scheduler
-        # reserves resources for critical add-on pods so that they can be rescheduled after
-        # a failure.  This annotation works in tandem with the toleration below.
-        scheduler.alpha.kubernetes.io/critical-pod: ''
-    spec:
-      nodeSelector:
-        beta.kubernetes.io/os: linux
-      serviceAccountName: cnx-manager
-      tolerations:
-      - key: node-role.kubernetes.io/master
-        effect: NoSchedule
-      # Allow this pod to be rescheduled while the node is in "critical add-ons only" mode.
-      # This, along with the annotation above marks this pod as a critical add-on.
-      - key: CriticalAddonsOnly
-        operator: Exists
-      imagePullSecrets:
-{{- if .Values.imagePullSecrets }}
-{{- range $key, $value := .Values.imagePullSecrets }}
-        - name: {{ $key }}
-{{- end }}
-{{- end }}
-      # cnx-manager-init-pem writes a "pem" file into a volume shared by
-      # cnx-manager-proxy.
-      initContainers:
-      - name: cnx-manager-init-pem # create /cache/pem for cnx-manager-proxy
-        image: alpine:3.7
-        command: ['sh', '-c', 'cat /etc/cnx-manager-web-tls/cert /etc/cnx-manager-web-tls/key > /cache/pem']
-        volumeMounts:
-        - mountPath: /cache
-          name: cnx-cache-volume
-        - mountPath: /etc/cnx-manager-web-tls
-          name: cnx-manager-tls
-      containers:
-      - name: cnx-manager
-        image: {{.Values.manager.image}}:{{.Values.manager.tag}}
-        env:
-          - name: CNX_WEB_AUTHENTICATION_TYPE
-            valueFrom:
-              configMapKeyRef:
-                name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.authentication-type
-          - name: CNX_WEB_OIDC_AUTHORITY
-            valueFrom:
-              configMapKeyRef:
-                name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.oidc-authority
-          - name: CNX_WEB_OIDC_CLIENT_ID
-            valueFrom:
-              configMapKeyRef:
-                name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.oidc-client-id
-          - name: CNX_PROMETHEUS_API_URL
-            valueFrom:
-              configMapKeyRef:
-                name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.prometheus-api-url
-          - name: CNX_COMPLIANCE_API_URL
-            valueFrom:
-              configMapKeyRef:
-                name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.compliance-api-url
-          - name: CNX_QUERY_API_URL
-            valueFrom:
-              configMapKeyRef:
-                name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.query-api-url
-          - name: CNX_ELASTICSEARCH_API_URL
-            valueFrom:
-              configMapKeyRef:
-                name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.elasticsearch-api-url
-          - name: CNX_ELASTICSEARCH_KIBANA_URL
-            valueFrom:
-              configMapKeyRef:
-                name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.kibana-url
-          - name: CNX_ENABLE_ERROR_TRACKING
-            valueFrom:
-              configMapKeyRef:
-                name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.error-tracking
-          - name: CNX_ALP_SUPPORT
-            valueFrom:
-              configMapKeyRef:
-                name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.alp-support
-          - name: CNX_CLUSTER_NAME
-            valueFrom:
-              configMapKeyRef:
-                name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.cluster-name
-{{- if eq .Values.datastore "etcd" }}
-          - name: CNX_WEB_OAUTH_AUTHORITY
-            valueFrom:
-              configMapKeyRef:
-                name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.oauth-authority
-          - name: CNX_WEB_OAUTH_CLIENT_ID
-            valueFrom:
-              configMapKeyRef:
-                name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.oauth-client-id
-{{- end }}
-{{- if .Values.manager.env }}
-{{ toYaml .Values.manager.env | indent 10 }}
-{{- end }}
-        # Use the same liveness check as the proxy since
-        # the static content is only served over the localhost
-        # interface. Liveness check hits the static content through the proxy.
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 9443
-            scheme: HTTPS
-          initialDelaySeconds: 90
-          periodSeconds: 10
-      - name: cnx-manager-proxy
-        image: {{.Values.managerProxy.image}}:{{.Values.managerProxy.tag}}
-        env:
-          - name: CNX_WEB_AUTHENTICATION_TYPE
-            valueFrom:
-              configMapKeyRef:
-                name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.authentication-type
-          - name: CNX_WEB_OIDC_AUTHORITY
-            valueFrom:
-              configMapKeyRef:
-                name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.oidc-authority
-          - name: CNX_WEB_OIDC_CLIENT_ID
-            valueFrom:
-              configMapKeyRef:
-                name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.oidc-client-id
-{{- if eq .Values.datastore "etcd" }}
-          - name: CNX_WEB_OAUTH_AUTHORITY
-            valueFrom:
-              configMapKeyRef:
-                name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.oauth-authority
-          - name: CNX_WEB_OAUTH_CLIENT_ID
-            valueFrom:
-              configMapKeyRef:
-                name: tigera-cnx-manager-config
-                key: tigera.cnx-manager.oauth-client-id
-{{- end }}
-{{- if .Values.managerProxy.env }}
-{{ toYaml .Values.managerProxy.env | indent 10 }}
-{{- end }}
-        volumeMounts:
-        - mountPath: /etc/cnx-manager-web-tls
-          name: cnx-manager-tls
-        - mountPath: /cache
-          name: cnx-cache-volume
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 9443
-            scheme: HTTPS
-          initialDelaySeconds: 90
-          periodSeconds: 10
-      volumes:
-      - name: cnx-cache-volume
-        emptyDir: {}
-      - name: cnx-manager-tls
-        secret:
-          secretName: cnx-manager-tls
----
-
-kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1beta1
-metadata:
-  name: tigera-ui-user
-rules:
-# "list" requests that the Tigera EE Manager needs
-- apiGroups: ["projectcalico.org","networking.k8s.io","extensions",""]
-  # Use both networkpolicies and tier.networkpolicies, and globalnetworkpolicies and tier.globalnetworkpolicies resource
-  # types to ensure identical behavior irrespective of the Calico RBAC scheme (see the ClusterRole
-  # "ee-calico-tiered-policy-passthru" for more details).
-  resources: ["tiers","networkpolicies","tier.networkpolicies","globalnetworkpolicies","tier.globalnetworkpolicies","namespaces","globalnetworksets"]
-  verbs: ["watch","list"]
-# Access to flow logs, audit logs, and statistics
-- apiGroups: [""]
-  resources: ["services/proxy"]
-  resourceNames: ["https:cnx-api:8080", "calico-node-prometheus:9090", "https:elasticsearch-tigera-elasticsearch:8443", "elasticsearch-tigera-elasticsearch:9200"]
-  verbs: ["get","create"]
-# Access to policies in the default tier
-- apiGroups: ["projectcalico.org"]
-  resources: ["tiers"]
-  resourceNames: ["default"]
-  verbs: ["get"]
----
-
-kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1beta1
-metadata:
-  name: network-admin
-rules:
-# Full access to all network policies
-- apiGroups: ["projectcalico.org","networking.k8s.io","extensions"]
-  # Use both networkpolicies and tier.networkpolicies, and globalnetworkpolicies and tier.globalnetworkpolicies resource
-  # types to ensure identical behavior irrespective of the Calico RBAC scheme (see the ClusterRole
-  # "ee-calico-tiered-policy-passthru" for more details).
-  resources: ["tiers","networkpolicies","tier.networkpolicies","globalnetworkpolicies","tier.globalnetworkpolicies","globalnetworksets"]
-  verbs: ["create","update","delete","patch","get","watch","list"]
-# Additional "list" requests that the Tigera EE Manager needs
-- apiGroups: [""]
-  resources: ["namespaces"]
-  verbs: ["watch","list"]
-# Access to flow logs, audit logs, and statistics
-- apiGroups: [""]
-  resources: ["services/proxy"]
-  resourceNames: ["https:cnx-api:8080", "calico-node-prometheus:9090", "https:elasticsearch-tigera-elasticsearch:8443", "elasticsearch-tigera-elasticsearch:9200"]
-  verbs: ["get","create"]
----
