--- a/master/getting-started/kubernetes/installation/hosted/cnx/1.7/cnx-api-kdd.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/cnx/1.7/cnx-api-kdd.yaml
@@ -1,6 +1,6 @@
 ---
 layout: null
 ---
-{% helm --execute templates/cnx.yaml %}
+{% helm --execute templates/cnx-api.yaml %}
 datastore: kdd
 {% endhelm %}
