--- a/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-ecs/cnx-api-kdd-eks.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-ecs/cnx-api-kdd-eks.yaml
@@ -1,7 +1,7 @@
 ---
 layout: null
 ---
-{% helm --execute templates/cnx.yaml %}
+{% helm --execute templates/cnx-api.yaml %}
 datastore: kdd
 platform: eks
 {% endhelm %}
