--- a/_data/v2_3/navbars/getting-started.yml
+++ b/_data/v2_3/navbars/getting-started.yml
@@ -34,7 +34,7 @@ toc:
       path: /getting-started/kubernetes/installation/byo-elasticsearch
     - title: Installing Tigera Secure EE on Docker Enterprise
       path: /getting-started/kubernetes/installation/docker-ee
-    - title: Installing Tigera Secure EE on EKS
+    - title: Installing Tigera Secure EE on Amazon EKS
       path: /getting-started/kubernetes/installation/eks
   - title: Tutorials
     section:
