Disable snapshotter until install is fixed, to unblock wavetank

--- a/master/manifests/compliance/compliance.yaml
+++ b/master/manifests/compliance/compliance.yaml
@@ -2,7 +2,7 @@
 layout: null
 ---
 
-{% helm --execute templates/compliance/compliance-server.yaml  --execute templates/compliance/compliance-snapshotter.yaml  --execute templates/compliance/compliance-controller.yaml %}
+{% helm --execute templates/compliance/compliance-server.yaml  --execute templates/compliance/compliance-controller.yaml %}
 secure_es: false
 datastore: "etcd"
 {% endhelm %}
