rename 'calico_ipam' to 'ipam' in helm options
cherry-pick: https://github.com/projectcalico/calico/pull/2545

--- a/_includes/master/charts/calico/base_values.yaml
+++ b/_includes/master/charts/calico/base_values.yaml
@@ -1,7 +1,10 @@
 federation:
   enabled: false
 network: calico
-calico_ipam: true
+
+# Sets the ipam. Can be 'calico-ipam' or 'host-local'
+ipam: calico-ipam
+
 datastore: kdd
 app_layer_policy:
   enabled: false
