--- a/master/getting-started/openshift/upgrade-calico-3.10.yaml
+++ b/master/getting-started/openshift/upgrade-calico-3.10.yaml
@@ -9,7 +9,7 @@ layout: null
   hosts: oo_masters_to_config
   any_errors_fatal: true
   roles:
-  - role: calico
+  - role: calico_master
     when: openshift_use_calico | default(false) | bool
 
 - name: Create additional node network plugin groups
@@ -24,6 +24,6 @@ layout: null
 - name: Additional calico node config
   hosts: oo_nodes_use_calico
   roles:
-  - role: calico_node
+  - role: calico
     when: openshift_use_calico | default(false) | bool
 {% endraw %}
