--- a/v2.3/getting-started/openshift/upgrade-calico.yaml
+++ b/v2.3/getting-started/openshift/upgrade-calico.yaml
@@ -1,7 +1,7 @@
-{% raw %}
 ---
 layout: null
 ---
+{% raw %}
 
 - import_playbook: init/main.yml
 
@@ -9,7 +9,7 @@ layout: null
   hosts: oo_masters_to_config
   any_errors_fatal: true
   roles:
-  - role: calico_master
+  - role: calico
     when: openshift_use_calico | default(false) | bool
 
 - name: Create additional node network plugin groups
@@ -24,6 +24,6 @@ layout: null
 - name: Additional calico node config
   hosts: oo_nodes_use_calico
   roles:
-  - role: calico
+  - role: calico_node
     when: openshift_use_calico | default(false) | bool
 {% endraw %}
