ET fix prometheus docker ee (#1003)
* fix up docker-ee docs and CNX-6986

* add  kibana-tigera-elasticsearch update

--- a/_includes/master/charts/tigera-secure-lma/templates/operator.yaml
+++ b/_includes/master/charts/tigera-secure-lma/templates/operator.yaml
@@ -114,6 +114,7 @@ spec:
         args:
           - --prometheus-config-reloader=quay.io/coreos/prometheus-config-reloader:{{.Values.prometheusConfigReloader.tag}}
           - --config-reloader-image=quay.io/coreos/configmap-reload:{{.Values.configmapReload.tag}}
+          - --config-reloader-memory=25Mi
         resources:
           requests:
             cpu: 100m
