--- a/_includes/master/manifests/compliance/compliance-server.yaml
+++ b/_includes/master/manifests/compliance/compliance-server.yaml
@@ -3,7 +3,7 @@ kind: ServiceAccount
 apiVersion: v1
 metadata:
   name: tigera-compliance-server
-  namespace: calico-monitoring
+  namespace: kube-system
 
 ---
 
@@ -48,7 +48,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: tigera-compliance-server
-  namespace: calico-monitoring
+  namespace: kube-system
 
 
 ---
@@ -57,7 +57,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: compliance
-  namespace: calico-monitoring
+  namespace: kube-system
 spec:
   ports:
   - name: compliance-api
@@ -74,7 +74,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: compliance-server
-  namespace: calico-monitoring
+  namespace: kube-system
   labels:
     k8s-app: compliance-server
 spec:
@@ -87,7 +87,7 @@ spec:
   template:
     metadata:
       name: compliance-server
-      namespace: calico-monitoring
+      namespace: kube-system
       labels:
         k8s-app: compliance-server
     spec:
