--- a/_includes/master/manifests/compliance/compliance-snapshotter.yaml
+++ b/_includes/master/manifests/compliance/compliance-snapshotter.yaml
@@ -3,7 +3,7 @@ kind: ServiceAccount
 apiVersion: v1
 metadata:
   name: tigera-compliance-snapshotter
-  namespace: calico-monitoring
+  namespace: kube-system
 
 ---
 
@@ -51,7 +51,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: tigera-compliance-snapshotter
-  namespace: calico-monitoring
+  namespace: kube-system
 
 
 ---
@@ -60,7 +60,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: compliance-snapshotter
-  namespace: calico-monitoring
+  namespace: kube-system
   labels:
     k8s-app: compliance-snapshotter
 spec:
@@ -73,7 +73,7 @@ spec:
   template:
     metadata:
       name: compliance-snapshotter
-      namespace: calico-monitoring
+      namespace: kube-system
       labels:
         k8s-app: compliance-snapshotter
     spec:
