Scaleloader: is working
It includes
- protected/unprotected playbook
- producing an image for running in a cluster
- manifest for running in a cluster
- README to help configure and run the tool

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ cmd/reporter/reporter
 cmd/server/server
 cmd/snapshotter/snapshotter
 cmd/mockdata-exporter/mockdata-exporter
+docker-image/scaleloader/playbooks
+docker-image/scaleloader/bin
 
 cmd/server/apiserver.local.config/
 .settings
