--- a/report-types/default/manifests/inventory.yaml
+++ b/report-types/default/manifests/inventory.yaml
@@ -23,6 +23,6 @@ spec:
       {{ .ID.Name }},{{ .ID.Namespace }},{{ .IngressProtected }},{{ .EgressProtected }},{{ .EnvoyEnabled }},{{ join .AppliedPolicies “;” }},{{ join .Services “;” }}
       {{- end }}
   uiCompleteTemplate:
-    name: ui-inventory-complete.json
+    name: ui-complete.json
   uiSummaryTemplate:
-    name: ui-inventory-summary.json
+    name: ui-summary.json
