Fixing syntax problem with Helm template in CNX yaml; switching auth type values to title case instead of lower case.

--- a/_includes/master/charts/calico/base_values.yaml
+++ b/_includes/master/charts/calico/base_values.yaml
@@ -88,8 +88,8 @@ manager:
     key: null
   auth:
     # Auth type. TSEE supports Basic, OIDC, Token, and OAuth
-    # type: (oidc | basic | token | oauth)
-    type: basic
+    # type: (OIDC | Basic | Token | OAuth)
+    type: Basic
     # The authority.  Required if authentication type is OIDC or OAuth.
     # OIDC  authority: "https://accounts.google.com"
     # OAuth authority: "https://<oauth-authority>/oauth/authorize"
