Gather audit summary stats and fix audit report type

--- a/report-types/default/audit.yaml
+++ b/report-types/default/audit.yaml
@@ -15,6 +15,5 @@ spec:
     - name: events.yaml
   auditEventsSelection:
     resources:
-      - kind: 'globalnetworkpolicy'
-        name: 'grt-aes-g'
-        namespace: 'grt-aes-gnp-ns'
+      - kind: 'GlobalNetworkPolicy'
+      - kind: 'NetworkPolicy'
