--- a/report-types/default/manifests/audit.yaml
+++ b/report-types/default/manifests/audit.yaml
@@ -8,9 +8,8 @@ metadata:
 spec:
   auditEventsSelection:
     resources:
-    - kind: globalnetworkpolicy
-      name: grt-aes-g
-      namespace: grt-aes-gnp-ns
+      - kind: 'GlobalNetworkPolicy'
+      - kind: 'NetworkPolicy'
   downloadTemplates:
   - name: summary.csv
     template: |
