--- a/_includes/master/manifests/compliance/compliance-server.yaml
+++ b/_includes/master/manifests/compliance/compliance-server.yaml
@@ -3,7 +3,7 @@ kind: ServiceAccount
 apiVersion: v1
 metadata:
   name: tigera-compliance-server
-  namespace: kube-system
+  namespace: calico-monitoring
 
 ---
 
@@ -46,7 +46,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: tigera-compliance-server
-  namespace: kube-system
+  namespace: calico-monitoring
 
 
 ---
@@ -55,7 +55,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: compliance
-  namespace: kube-system
+  namespace: calico-monitoring
 spec:
   ports:
   - name: compliance-api
@@ -72,7 +72,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: compliance-server
-  namespace: kube-system
+  namespace: calico-monitoring
   labels:
     k8s-app: compliance-server
 spec:
@@ -85,7 +85,7 @@ spec:
   template:
     metadata:
       name: compliance-server
-      namespace: kube-system
+      namespace: calico-monitoring
       labels:
         k8s-app: compliance-server
     spec:
