--- a/master/manifests/compliance/compliance-kdd.yaml
+++ b/master/manifests/compliance/compliance-kdd.yaml
@@ -2,7 +2,7 @@
 layout: null
 ---
 
-{% helm --execute templates/compliance/compliance-server.yaml  --execute templates/compliance/compliance-controller.yaml %}
+{% helm tigera-secure-lma --execute templates/compliance/compliance-server.yaml  --execute templates/compliance/compliance-controller.yaml %}
 secure_es: false
 datastore: "kdd"
 {% endhelm %}
