--- a/master/manifests/compliance/secure-es/compliance.yaml
+++ b/master/manifests/compliance/secure-es/compliance.yaml
@@ -2,7 +2,7 @@
 layout: null
 ---
 
-{% helm --execute templates/compliance/compliance-server.yaml  --execute templates/compliance/compliance-snapshotter.yaml  --execute templates/compliance/compliance-controller.yaml %}
+{% helm tigera-secure-lma --execute templates/compliance/compliance-server.yaml  --execute templates/compliance/compliance-snapshotter.yaml  --execute templates/compliance/compliance-controller.yaml %}
 secure_es: true
 datastore: "etcd"
 {% endhelm %}
