Add UI summary templates and other template tweaks

--- a/report-types/default/inventory.yaml
+++ b/report-types/default/inventory.yaml
@@ -7,11 +7,7 @@ metadata:
 spec:
   uiSummaryTemplate:
     name: ui-summary.json
+  includeEndpointData: true
   downloadTemplates:
     - name: summary.csv
     - name: endpoints.csv
-  auditEventsSelection:
-    resources:
-      - kind: 'globalnetworkpolicy'
-        name: 'grt-aes-g'
-        namespace: 'grt-aes-gnp-ns'
