--- a/report-types/default/manifests/inventory.yaml
+++ b/report-types/default/manifests/inventory.yaml
@@ -6,11 +6,6 @@ metadata:
     global-report-type: inventory
   name: inventory
 spec:
-  auditEventsSelection:
-    resources:
-    - kind: globalnetworkpolicy
-      name: grt-aes-g
-      namespace: grt-aes-gnp-ns
   downloadTemplates:
   - name: summary.csv
     template: |
@@ -18,9 +13,103 @@ spec:
       {{ .StartTime }},{{ .EndTime }},{{ .ReportSpec.EndpointsSelection.EndpointSelector }},{{ join .ReportSpec.EndpointsSelection.Namespaces.Names ";" }},{{ .ReportSpec.EndpointsSelection.Namespaces.Selector }},{{ join .ReportSpec.EndpointsSelection.ServiceAccounts.Names ";" }},{{ .ReportSpec.EndpointsSelection.ServiceAccounts.Selector }},{{ {{ .EndpointsSummary.NumTotal }},{{ .EndpointsSummary.NumIngressProtected }},{{.EndpointsSummary.NumEgressProtected }},{{ .EndpointsSummary.NumIngressFromInternet }},{{ .EndpointsSummary.NumEgressToInternet }},{{ .EndpointsSummary.NumIngressFromOtherNamespace }},{{ .EndpointsSummary.NumEgressToOtherNamespace }},{{ .EndpointsSummary.NumEnvoyEnabled }}
   - name: endpoints.csv
     template: |
-      name,namespace,ingressProtected,egressProtected,envoyEnabled,appliedPolicies,services
+      endpoint,ingressProtected,egressProtected,envoyEnabled,appliedPolicies,services
       {{ range .Endpoints -}}
-      {{ .Endpoint.Name }},{{ .Endpoint.Namespace }},{{ .IngressProtected }},{{ .EgressProtected }},{{ .EnvoyEnabled }},{{ join .AppliedPolicies “;” }},{{ join .Services “;” }}
+      {{ .Endpoint }},{{ .IngressProtected }},{{ .EgressProtected }},{{ .EnvoyEnabled }},{{ join .AppliedPolicies “;” }},{{ join .Services “;” }}
       {{- end }}
+  includeEndpointData: true
   uiSummaryTemplate:
     name: ui-summary.json
+    template: |
+      {
+        uiSummary: {
+          type: "panel",
+          heading: 'Inscope vs Protected',
+          widgets: [
+            {
+              type: "radialbarchart",
+              heading: 'Endpoints',
+              summary: {
+                label: 'Total',
+                total: {{ .EndpointsSummary.NumTotal }}
+              },
+              data: [
+                {
+                  label: 'Protected ingress',
+                  value: {{ .EndpointsSummary.NumIngressProtected }}
+                }
+              ]
+            },
+            {
+              type: "radialbarchart",
+              heading: 'Namespaces',
+              summary: {
+                label: 'Total',
+                total: {{ .NamespacesSummary.NumTotal }}
+              },
+              data: [
+                {
+                  label: 'Protected ingress',
+                  value: {{ .NamespacesSummary.NumIngressProtected }}
+                }
+              ]
+            },
+            {
+              type: "radialbarchart",
+              heading: 'Service Accounts',
+              summary: {
+                label: 'Total',
+                total: {{ .ServicesSummary.NumTotal }}
+              },
+              data: [
+                {
+                  label: 'Protected ingress',
+                  value: {{ .ServicesSummary.NumIngressProtected }}
+                }
+              ]
+            },
+            {
+              type: "radialbarchart",
+              heading: 'Endpoints',
+              summary: {
+                label: 'Total',
+                total: {{ .EndpointsSummary.NumTotal }}
+              },
+              data: [
+                {
+                  label: 'Protected egress',
+                  value: {{ .EndpointsSummary.NumEgressProtected }}
+                }
+              ]
+            },
+            {
+              type: "radialbarchart",
+              heading: 'Namespaces',
+              summary: {
+                label: 'Total',
+                total: {{ .NamespacesSummary.NumTotal }}
+              },
+              data: [
+                {
+                  label: 'Protected egress',
+                  value: {{ .NamespacesSummary.NumEgressProtected }}
+                }
+              ]
+            },
+            {
+              type: "radialbarchart",
+              heading: 'Service Accounts',
+              summary: {
+                label: 'Total',
+                total: {{ .ServicesSummary.NumTotal }}
+              },
+              data: [
+                {
+                  label: 'Protected egress',
+                  value: {{ .ServicesSummary.NumEgressProtected }}
+                }
+              ]
+            }
+          ]
+        }
+      }
