give cnx-apiserver access to globalreporttypes and globalreports

--- a/_includes/master/manifests/cnx.yaml
+++ b/_includes/master/manifests/cnx.yaml
@@ -297,6 +297,8 @@ rules:
       - licensekeys
       - globalnetworksets
       - globalthreatfeeds
+      - globalreporttypes
+      - globalreports
     verbs:
       - "*"
 
